# flightclaw

./: .gitignore  README.md  SKILL.md
docs/: examples.md  reference.md
skills/12306-skill/: README.md  SKILL.md
skills/12306-skill/scripts/: query.mjs
skills/flightclaw-skill/: README.md  SKILL.md  pyproject.toml
skills/flightclaw-skill/flightclaw/: README.md  __init__.py  __main__.py  flightclaw_cli.py
skills/flightclaw-skill/flightclaw/core/: __init__.py  models.py  search.py  session.py
skills/flightclaw-skill/flightclaw/providers/: __init__.py  base.py  ctrip.py  example.py  template_provider.py
skills/flightclaw-skill/flightclaw/skills/: SKILL.md
skills/flightclaw-skill/flightclaw/utils/: __init__.py  http.py
skills/flightclaw-skill/scripts/: flight.py
skills/flightclaw-skill/tests/: TEST.md  __init__.py  test_core.py  test_ctrip_cookie_format.py  test_ctrip_parse.py  test_full_e2e.py
