[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flightclaw"
version = "0.1.0"
description = "Flight search CLI — pluggable crawlers (example, Ctrip), REPL, JSON output"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "click>=8.0.0",
  "httpx>=0.27",
  "prompt-toolkit>=3.0.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
parse = ["selectolax>=0.3"]
ctrip = ["playwright>=1.40.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[project.scripts]
flightclaw = "flightclaw.flightclaw_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["flightclaw*"]

[tool.setuptools.package-data]
flightclaw = ["skills/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
